--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -14,7 +14,7 @@ env:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: Attempt to checkout tag
         uses: actions/checkout@v3
@@ -31,7 +31,7 @@ jobs:
         uses: redhat-actions/openshift-tools-installer@v1
         with:
           oc: "4.14"
-          
+
       - name: Login OpenShift
         uses: redhat-actions/oc-login@v1
         with:
