CMS-000: Explicitly install oc tools in deploy action

--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -89,6 +89,11 @@ jobs:
     runs-on: ubuntu-24.04
     needs: [build-frontend, build-backend]
     steps:
+      - name: Install OpenShift CLI tools
+        uses: redhat-actions/openshift-tools-installer@v1
+        with:
+          oc: "4.14"
+
       - name: Login OpenShift
         uses: redhat-actions/oc-login@v1
         with:
