CMS-603: Fix dates timezone issue. Use UTC dates regardless of timezone.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.5",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "lodash": "^4.17.21",
     "oidc-client-ts": "^3.0.1",
     "prop-types": "^15.8.1",
