--- a/backend/package.json
+++ b/backend/package.json
@@ -29,11 +29,13 @@
   "dependencies": {
     "@adminjs/express": "^6.1.0",
     "@adminjs/sequelize": "^4.1.1",
+    "@fast-csv/format": "^5.0.2",
     "adminjs": "^7.8.13",
     "axios": "^1.7.8",
     "compression": "^1.7.4",
     "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
+    "date-fns-tz": "^3.2.0",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
     "express-formidable": "^1.2.0",
