--- a/backend/.env.local.example
+++ b/backend/.env.local.example
@@ -12,3 +12,8 @@ ADMIN_PASSWORD="some random string"
 ADMIN_COOKIE_NAME="adminjs"
 ADMIN_COOKIE_PASSWORD="another random string"
 ADMIN_SESSION_SECRET="another random string"
+
+# Generate on Strapi admin panel {strapiURL}/admin/settings/api-tokens
+STRAPI_TOKEN="your-strapi-token"
+# URL of the Strapi API
+STRAPI_URL="http://host.docker.internal:1337"
