--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "dotenvx run -f .env.local --overload -- nodemon index.js",
+    "dev": "nodemon index.js",
     "start": "node index.js",
     "lint": "eslint .",
     "migrate": "sequelize-cli db:migrate",
@@ -18,7 +18,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@dotenvx/dotenvx": "^1.14.0",
     "eslint": "^9.9.1",
     "eslint-config-eslint": "^11.0.0",
     "eslint-config-prettier": "^9.1.0",
@@ -27,6 +26,7 @@
     "prettier": "3.3.3"
   },
   "dependencies": {
+    "@dotenvx/dotenvx": "^1.33.0",
     "@adminjs/express": "^6.1.0",
     "@adminjs/sequelize": "^4.1.1",
     "@fast-csv/format": "^5.0.2",
