CMS-641: Fix backend references in helm charts

--- a/helm/deployment/templates/frontend/frontend-deployment.yaml
+++ b/helm/deployment/templates/frontend/frontend-deployment.yaml
@@ -58,7 +58,7 @@ spec:
             - name: VITE_OIDC_LOGOUT_REDIRECT
               value: {{ .Values.frontend.env.externalUrl }}
             - name: VITE_API_BASE_URL
-              value: {{ .Values.backend.env.externalUrl }}
+              value: {{ .Values.backend.env.externalUrl }}/api
           readinessProbe:
             httpGet:
               path: /
