--- a/helm/crunchy-postgres/values-alpha-dev.yaml
+++ b/helm/crunchy-postgres/values-alpha-dev.yaml
@@ -1,4 +1,4 @@
-fullnameOverride: crunchy-postgres
+fullnameOverride: crunchy-postgres-alpha
 
 crunchyImage: # it's not necessary to specify an image as the images specified in the Crunchy Postgres Operator will be pulled by default
 #crunchyImage: artifacts.developer.gov.bc.ca/bcgov-docker-local/crunchy-postgres-gis:ubi8-15.2-3.3-0 # use this image for POSTGIS
