--- a/helm/deployment/values-dev.yaml
+++ b/helm/deployment/values-dev.yaml
@@ -10,4 +10,5 @@ frontend:
 backend:
   env:
     externalUrl: https://dev-staff-api.bcparks.ca
+    devTestMode: "true"
   postgresSecret: crunchy-postgres-pguser-postgres
