CMS-657: Restructure sync script and add it to admin.js

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,7 @@
     "lint": "eslint .",
     "migrate": "sequelize-cli db:migrate",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sync-data": "node strapi-sync/syncData.js",
-    "one-time-data-import": "node strapi-sync/oneTimeDataImport.js",
-    "create-single-item-campgrounds": "node strapi-sync/create-single-item-campgrounds.js",
-    "create-multiple-item-campgrounds": "node strapi-sync/create-multiple-item-campgrounds.js",
-    "create-missing-dates-and-seasons": "node strapi-sync/create-missing-dates-and-seasons.js"
+    "import-data": "node strapi-sync/import-data.js"
   },
   "author": "",
   "license": "ISC",
