CMS-657: Add STRAPI_TOKEN and STRAPI_URL to helm charts

--- a/helm/deployment/templates/backend/backend-deployment.yaml
+++ b/helm/deployment/templates/backend/backend-deployment.yaml
@@ -68,6 +68,13 @@ spec:
               value: {{ .Values.cluster.ssoAuthUrl }}/realms/{{ .Values.cluster.ssoRealm }}/protocol/openid-connect/certs
             - name: JWT_ISSUER
               value: {{ .Values.cluster.ssoAuthUrl }}/realms/{{ .Values.cluster.ssoRealm }}
+            - name: STRAPI_TOKEN
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Release.Name }}-strapi-token
+                  key: STRAPI_TOKEN
+            - name: STRAPI_URL
+              value: {{ .Values.cluster.cmsUrl }}
           envFrom:
             - secretRef:
                 name: {{ .Release.Name }}-adminjs-secret
