--- a/helm/crunchy-postgres/values-test.yaml
+++ b/helm/crunchy-postgres/values-test.yaml
@@ -76,7 +76,7 @@ pgBackRest:
       cpu: 50m
       memory: 128Mi
   s3:
-    enabled: false
+    enabled: true
     createS3Secret: true
     # the s3 secret name
     s3Secret: s3-pgbackrest
@@ -85,9 +85,9 @@ pgBackRest:
     # s3UriStyle is host or path
     s3UriStyle: path
     # bucket specifies the S3 bucket to use,
-    bucket: "bucketName"
+    bucket: "doottest"
     # endpoint specifies the S3 endpoint to use.
-    endpoint: "endpointName"
+    endpoint: "nrs.objectstore.gov.bc.ca"
     # region specifies the S3 region to use. If your S3 storage system does not
     # use "region", fill this in with a random value.
     region: "ca-central-1"
