--- a/helm/crunchy-postgres/values-prod.yaml
+++ b/helm/crunchy-postgres/values-prod.yaml
@@ -16,7 +16,7 @@ instances:
   name: ha # high availability
   replicas: 2
   dataVolumeClaimSpec:
-    storage: 480Mi
+    storage: 2Gi
     storageClassName: netapp-block-standard
   requests:
     cpu: 100m
@@ -59,7 +59,7 @@ pgBackRest:
       incremental: 0 0,4,12,16,20 * * *
     volume:
       accessModes: "ReadWriteOnce"
-      storage: 1Gi
+      storage: 2Gi
       storageClassName: netapp-file-backup
   repoHost:
     requests:
@@ -76,7 +76,7 @@ pgBackRest:
       cpu: 50m
       memory: 128Mi
   s3:
-    enabled: false
+    enabled: true
     createS3Secret: true
     # the s3 secret name
     s3Secret: s3-pgbackrest
@@ -85,9 +85,9 @@ pgBackRest:
     # s3UriStyle is host or path
     s3UriStyle: path
     # bucket specifies the S3 bucket to use,
-    bucket: "bucketName"
+    bucket: "dootprod"
     # endpoint specifies the S3 endpoint to use.
-    endpoint: "endpointName"
+    endpoint: "nrs.objectstore.gov.bc.ca"
     # region specifies the S3 region to use. If your S3 storage system does not
     # use "region", fill this in with a random value.
     region: "ca-central-1"
