--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,7 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "file-saver": "^2.0.5",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "oidc-client-ts": "^3.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
