--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.3.1",
     "react-oidc-context": "^3.2.0",
     "react-router-dom": "^6.30.0",
+    "react-select": "^5.10.1",
     "sass-embedded": "^1.78.0",
     "vite": "^5.4.1"
   },
