--- a/helm/crunchy-postgres/templates/PostgresCluster.yaml
+++ b/helm/crunchy-postgres/templates/PostgresCluster.yaml
@@ -147,7 +147,7 @@ spec:
       {{- if and .Values.pgBackRest.restore .Values.pgBackRest.restore.enabled }}
       restore:
         enabled: {{ .Values.pgBackRest.restore.enabled }}
-        repoName: {{ .Values.pgBackRest.restore.repo }}
+        repoName: {{ .Values.pgBackRest.restore.repoName }}
         options:
           - --type=time
           - --target="{{ .Values.pgBackRest.restore.target }}"
@@ -156,7 +156,7 @@ spec:
       manual:
         options:
           - --type=full
-        repoName: {{ .Values.pgBackRest.manual.repo }}
+        repoName: {{ .Values.pgBackRest.manual.repoName }}
 
       # this stuff is for the "pgbackrest" container (the only non-init container) in the "postgres-crunchy-repo-host" pod
       repoHost:
