--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
     "migrate": "sequelize-cli db:migrate",
     "test": "echo \"Error: no test specified\" && exit 1",
     "sync-data": "node strapi-sync/re-sync-data.js",
-    "import-data": "node strapi-sync/import-data.js"
+    "import-data": "node strapi-sync/import-data.js",
+    "create-seasons": "node tasks/create-seasons.js"
   },
   "author": "",
   "license": "ISC",
