CMS-324: Add bundle data

--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,4 @@ helm/crunchy-postgres/Chart.yaml
 helm/crunchy-postgres/values.yaml
 
 bcparks-staff-portal.code-workspace
+backend/tasks/populate-access-groups/agreement.json
