--- a/.github/workflows/deploy-test.yaml
+++ b/.github/workflows/deploy-test.yaml
@@ -1,10 +1,10 @@
-name: Deploy to Test
+name: Deploy to Test & Training
 
 on:
   workflow_dispatch:
     inputs:
       releaseTag:
-        description: "Tag of version to be promoted to TEST"
+        description: "Tag of version to be deployed to TEST"
         required: true
 
 env:
