CMS-000: Split training and test deploy scripts

--- a/helm/deployment/values-training.yaml
+++ b/helm/deployment/values-training.yaml
@@ -4,9 +4,9 @@ cluster:
 
 images:
   frontend:
-    tag: test
+    tag: training
   backend:
-    tag: test
+    tag: training
 
 frontend:
   env:
