--- a/frontend/Caddyfile
+++ b/frontend/Caddyfile
@@ -1,17 +1,20 @@
 :3000 {
     file_server
 
-    redir /v2 /v2/
-    handle_path /v2/* {
-        try_files /v2/{path} /v2/index.html
+    redir /v2 /dates/
+    redir /v2/ /dates/
+    redir /dates /dates/
+
+    handle_path /dates/* {
+        try_files /dates/{path} /dates/index.html
     }
 
     handle {
         try_files {path} /index.html
     }
 
-    header /v2/* Cache-Control "no-store, must-revalidate, no-cache, max-age=0, private"
-    header /v2/assets/* -Cache-Control
+    header /dates/* Cache-Control "no-store, must-revalidate, no-cache, max-age=0, private"
+    header /dates/assets/* -Cache-Control
 
     encode gzip
 
