--- a/helm/deployment/templates/backend/backend-deployment.yaml
+++ b/helm/deployment/templates/backend/backend-deployment.yaml
@@ -75,6 +75,8 @@ spec:
                   key: STRAPI_TOKEN
             - name: STRAPI_URL
               value: {{ .Values.cluster.cmsUrl }}
+            - name: ADMINJS_RELATIONS_LICENSE_KEY
+              value: ""
           envFrom:
             - secretRef:
                 name: {{ .Release.Name }}-adminjs-secret
