--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "@fast-csv/format": "^5.0.2",
     "adminjs": "^7.8.13",
     "axios": "^1.7.8",
+    "body-parser": "^2.2.0",
     "compression": "^1.7.4",
     "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
