CMS-1229: Update comments

--- a/backend/.env.local.example
+++ b/backend/.env.local.example
@@ -18,5 +18,5 @@ STRAPI_TOKEN="your-strapi-token"
 # URL of the Strapi API
 STRAPI_URL="http://host.docker.internal:1337"
 
-# Find license key in the 1password vault
+# Licence key for Relations plugin
 ADMINJS_RELATIONS_LICENSE_KEY="adminjs-relations-license-key"
