CMS-1229: Update helm config, readme

--- a/helm/deployment/templates/secrets/adminjs-secret.yaml
+++ b/helm/deployment/templates/secrets/adminjs-secret.yaml
@@ -21,4 +21,5 @@ stringData:
   ADMIN_COOKIE_NAME: "adminjs"
   ADMIN_COOKIE_PASSWORD: {{ $random_admin_cookie_password | quote }}
   ADMIN_SESSION_SECRET: {{ $random_admin_session_secret | quote }}
+  ADMINJS_RELATIONS_LICENSE_KEY: "value-from-password-vault"
 {{- end -}}
