CMS-1229: Fix JSON field issue in adminJS

--- a/backend/package.json
+++ b/backend/package.json
@@ -49,6 +49,7 @@
     "helmet": "^7.1.0",
     "jwks-rsa": "^3.1.0",
     "lodash": "^4.17.21",
+    "lodash.set": "^4.3.2",
     "morgan": "^1.10.0",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
