CMS-1229: Update admin js relations (#337)

--- a/backend/.env.local.example
+++ b/backend/.env.local.example
@@ -17,3 +17,6 @@ ADMIN_SESSION_SECRET="another random string"
 STRAPI_TOKEN="your-strapi-token"
 # URL of the Strapi API
 STRAPI_URL="http://host.docker.internal:1337"
+
+# Licence key for Relations plugin
+ADMINJS_RELATIONS_LICENSE_KEY="adminjs-relations-license-key"
