--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "sync-data": "node strapi-sync/re-sync-data.js",
     "import-data": "node strapi-sync/import-data.js",
-    "create-seasons": "node tasks/create-seasons.js"
+    "create-seasons": "node tasks/create-seasons/create-seasons.js"
   },
   "author": "",
   "license": "ISC",
