--- a/backend/.env.local.example
+++ b/backend/.env.local.example
@@ -20,3 +20,6 @@ STRAPI_URL="http://host.docker.internal:1337"
 
 # Licence key for Relations plugin
 ADMINJS_RELATIONS_LICENSE_KEY="adminjs-relations-license-key"
+
+# Enable Sequelize query logging (set to "true" to enable)
+SEQUELIZE_LOGGING="true"
