CMS-1339: Strapi sync cron task creation

--- a/helm/deployment/values-alpha-dev.yaml
+++ b/helm/deployment/values-alpha-dev.yaml
@@ -20,3 +20,6 @@ backend:
     externalUrl: https://alpha-dev-staff-api.bcparks.ca
     devTestMode: "true"
   postgresSecret: crunchy-postgres-alpha-pguser-postgres
+
+cron:
+  enabled: true
