--- a/helm/deployment/values-prod.yaml
+++ b/helm/deployment/values-prod.yaml
@@ -17,3 +17,7 @@ backend:
   env:
     externalUrl: https://staff-api.bcparks.ca
   postgresSecret: crunchy-postgres-pguser-postgres
+
+cron:
+  # this will be enabled in prod later once we have verified it works in other environments
+  enabled: false
