--- a/helm/deployment/values-test.yaml
+++ b/helm/deployment/values-test.yaml
@@ -18,3 +18,6 @@ backend:
     externalUrl: https://test-staff-api.bcparks.ca
     devTestMode: "true"
   postgresSecret: crunchy-postgres-pguser-postgres
+
+cron:
+  enabled: true
