--- a/helm/deployment/values-training.yaml
+++ b/helm/deployment/values-training.yaml
@@ -18,3 +18,6 @@ backend:
     externalUrl: https://training-staff-api.bcparks.ca
     devTestMode: "true"
   postgresSecret: crunchy-postgres-training-pguser-postgres
+
+cron:
+  enabled: true
