--- a/helm/deployment/values.yaml
+++ b/helm/deployment/values.yaml
@@ -61,6 +61,22 @@ backend:
     maxReplicas: 2
     cpuUtilizationThreshold: 125
 
-cms:
-  env:
-    externalUrl: https://dev-cms.bcparks.ca
+cron:
+  componentName: strapi-sync
+
+  enabled: true
+
+  # Run the cron job every day at 6:00 AM GMT (10:00 PM PST or 11:00 PM PDT)
+  schedule: "0 6 * * *"
+
+  successfulJobsHistoryLimit: 5
+  failedJobsHistoryLimit: 2
+  backoffLimit: 0
+
+  resources:
+    limits:
+      cpu: "1"
+      memory: 1Gi
+    requests:
+      cpu: 250m
+      memory: 250Mi
