--- a/helm/deployment/templates/cron/strapi-sync-cronjob.yaml
+++ b/helm/deployment/templates/cron/strapi-sync-cronjob.yaml
@@ -6,7 +6,7 @@ metadata:
     template: {{ .Release.Name }}-{{ .Values.cron.componentName }}-cronjob
     cronjob: {{ .Release.Name }}-{{ .Values.cron.componentName }}
 spec:
-  schedule: {{ .Values.cron.schedule }}
+  schedule: {{ .Values.cron.schedule | quote }}
   concurrencyPolicy: "Forbid"
   suspend: {{ not .Values.cron.enabled }}
   successfulJobsHistoryLimit: {{ .Values.cron.successfulJobsHistoryLimit }}
@@ -66,7 +66,7 @@ spec:
                       name: {{ .Release.Name }}-strapi-token
                       key: STRAPI_TOKEN
                 - name: STRAPI_URL
-                  value: {{ .Values.cluster.cmsUrl }}
+                  value: {{ .Values.cluster.cmsUrl | quote }}
           restartPolicy: "Never"
           terminationGracePeriodSeconds: 30
           activeDeadlineSeconds: 1600
